scss/pages/_whatwedo.scss
/* ... */
.services-wrapper{
    display: block;
    width: 100%;
    padding: 100px 0;
    background: var(--dark-blue-color);
    @media (max-width: 992px) {
        min-height: 1800px;
    }
    @media (max-width: 768px) {
        min-height: 1650px;
    }
    @media (max-width: 575px) {
        min-height: 1630px;
    }
    h2{
        font-size: 33px;
        font-weight: 500;
        color: #fff;
        margin-bottom: 50px;
        position: relative;
        padding-left: 110px;
        text-transform: unset;
        margin-top: 50px;
        @media (min-width: 1300px) and (max-width: 1400px) {
            font-size: 33px;
        }
        @media (min-width: 1200px) and (max-width: 1300px) {
            font-size: 30px;
        }
        @media (min-width: 1100px) and (max-width: 1200px) {
            font-size: 28px;
        }
        @media (min-width: 992px) and (max-width: 1100px) {
            font-size: 24px;
        }
        @media (max-width: 991px) {
            font-size: 22px;
        }
        @media (max-width: 600px) {
            font-size: 18px;
            letter-spacing: 3px;
            line-height: 24px;
        }
        &::after{
            content: '';
            position: absolute;
            width: 50px;
            height: 3px;
            background: var(--light-green);
            left: 0;
            top: 20px;
        }
        &::before{
            content: '';
            position: absolute;
            width: 30px;
            height: 30px;
            background: url(../images/logowhitecircle.svg) no-repeat 0 0;
            left: 60px;
            top: 6px;
            //transform: rotate(45deg);
        }
    }
    p{
        font-size: 20px;
        margin-bottom: 20px;
        line-height: 30px;
        padding-left: 110px;
        color: var(--white);
        padding-right: 300px;
        @media (max-width: 992px) {
            padding-right: 0;
            padding-left: 0;
        }
    }
    .services--items-wrapper{
        display: block;
        width: 85%;
        height: 500px;
        overflow-y: scroll;
        margin-left: 110px;
        scrollbar-color: #ccc;
        scrollbar-width: thin;
        margin-top: 50px;
        @media (max-width: 1400px) {
            width: 80%;
        }
        @media (max-width: 1200px) {
            width: 100%;
            height: 450px;
            margin-left: 0;
        }
        &::-webkit-scrollbar{
            background: transparent;
            width: 10px;
        }
        &::-webkit-scrollbar-thumb{
            background: rgba($color: #000000, $alpha: .5);
            border-radius: 10px;
        }
        &::-webkit-scrollbar-track{
            background: transparent;
        }
        .services--items{
            display: block;
            li{
                font-size: 36px;
                line-height: 80px;
                display: block;
                @media (max-width: 1400px) {
                    font-size: 26px;
                    line-height: 60px;
                }
                @media (max-width: 1200px) {
                    font-size: 21px;
                    line-height: 50px;
                }
                a{
                    color: var(--white);
                    text-decoration: none;
                    &:hover, &.active-text{
                        font-weight: 700;
                    }
                }
            }
        }
    }
    .service--explore-btn{
        display: block;
        margin-top: 50px;
        padding-left: 110px;
        a{
            display: inline-block;
            background: var(--light-green);
            line-height: 55px;
            color: var(--white);
            padding: 0 20px;
            text-decoration: none;
            svg{
                margin-left: 20px;
            }
        }
    }
    .service-img{
        display: block;
        margin-top: 50px;
        position: relative;
        img{
            position: absolute;
            opacity: 0;
            transition: all .2s linear;
            &.active{
                opacity: 1;
                transition: all .2s linear;
            }
        }
    }
}
/* ... */

